# my-service-bus

./: .gitignore  Cargo.toml  Dockerfile  HOW_IT_WORKS.md  README.md  TODO.md
.github/workflows/: release.yml  test.yml
JavaScript/: HtmlGraph.js.map  HtmlQueue.js  HtmlQueue.js.map  HtmlSessions.js  HtmlSessions.js.map  HtmlStatusBar.js  HtmlStatusBar.js.map  HtmlTopics.js  HtmlTopics.js.map  Iterators.js.map  ServiceLocator.js.map  SubpagesWidget.js.map  Utils.js.map  main.js.map
Typescript/: HtmlQueue.ts  HtmlSessions.ts  HtmlStatusBar.ts  HtmlTopics.ts  contracts.d.ts
docs/: gc-recovery.md
my-service-bus/: Cargo.toml
my-service-bus-ui/: Cargo.toml  Dioxus.toml  build.rs  build.sh
my-service-bus-ui/assets/: app.css  styled.css
my-service-bus-ui/css/: 01-tokens.css  02-reset.css  03-fonts.css  04-layout.css  05-sidebar.css  06-topbar.css  07-kpi.css  08-primitives.css  09-topic.css  10-sessions.css  11-dialog.css
my-service-bus-ui/src/: main.rs  utils.rs
my-service-bus-ui/src/api/: mod.rs  my_sb.rs  status.rs
my-service-bus-ui/src/components/: mod.rs  render_error.rs  render_loading.rs
my-service-bus-ui/src/components/ui/: badge.rs  button.rs  icons.rs  kpi.rs  led.rs  mod.rs  range_badge.rs  sidebar.rs  sparkline.rs  status_bar.rs  status_pill.rs  topbar.rs
my-service-bus-ui/src/dialogs/: delete_queue.rs  delete_topic.rs  dialog_template.rs  mod.rs
my-service-bus-ui/src/models/: mod.rs  my_sb_models.rs  status.rs
my-service-bus-ui/src/views/: dashboard.rs  mod.rs
my-service-bus-ui/src/views/my_service_bus/: mod.rs  render.rs  state.rs
my-service-bus-ui/src/views/my_service_bus/components/: mod.rs  render_graph.rs  render_message_id.rs  render_page.rs  render_queues.rs  render_sessions.rs  render_subscriber.rs  render_topic_connections.rs  render_topic_queues.rs
my-service-bus/src/: main.rs  test_tools.rs
my-service-bus/wwwroot/: index.html
proto/: MyServiceBusGrpcService.proto  MyServicePersistenceGrpcService.proto
src/: avg_value.rs  main.rs  settings.rs  test_tools.rs
src/app/: app_ctx.rs  immediately_persist_event_loop.rs  load_subpage_scheduler.rs  logs.rs  mod.rs  prometheus_metrics.rs  shutdown.rs
src/background/: dead_subscribers_kicker.rs  gc_timer.rs  immediately_persist_event_loop.rs  metrics_timer.rs  mod.rs  persist_topics_and_queues.rs  restore_sub_pages.rs
src/grpc/: mappers.rs
src/grpc_client/: error.rs  grpc_client.rs  mappers.rs  messages_pages_grpc_repo.rs  messages_pages_mock_repo.rs  mod.rs  protobuf_models.rs
src/http/: errors.rs  mod.rs  start_up.rs
src/mappers/: mappers.rs
src/messages_page/: active_sub_pages.rs  message_content.rs  messages_page.rs  messages_page_list.rs  messages_to_persist_bucket.rs  metrics.rs  missing_sub_page_inner.rs  mod.rs  my_sb_cached_message.rs  page_size_metrics.rs  size_metrics.rs  sub_page.rs  sub_page_data.rs  sub_page_inner.rs
src/operations/: create_topic_if_not_exists.rs  delete_topic.rs  delivery.rs  delivery_confirmation.rs  fail_result.rs  gc_http_connections.rs  gc_message_pages.rs  gc_queues_with_no_subscribers.rs  get_active_sub_pages.rs  get_next_messages_to_persist.rs  initialization.rs  load_page_and_try_to_deliver_again.rs  mod.rs  persist_topic_messages.rs  persist_topics_and_queues.rs  publisher.rs  queues.rs  restore_topic.rs  save_messages_for_topic.rs  send_package.rs  sessions.rs  subscriber.rs  update_topic_persist.rs
src/persistence/: messages_pages_grpc_repo.rs  messages_pages_mock_repo.rs  messages_pages_repo.rs
src/queue_subscribers/: mod.rs  queue_subscriber.rs  subscriber_id.rs  subscriber_id_generator.rs  subscriber_metrics.rs  subscribers_list.rs
src/queues/: delivery.rs  delivery_attempts.rs  delivery_bucket.rs  mod.rs  queue.rs  queue_data.rs  queue_metrics.rs  queues_list.rs
src/sessions/: http_connection_data.rs  mod.rs  my_sb_session.rs  session_connection.rs  session_id.rs  sessions_list.rs  sessions_list_data.rs  sessions_list_inner.rs  tcp_connection_data.rs  test_connection_data.rs
src/sub_page/: missing_sub_page_inner.rs  sub_page_inner.rs
src/tcp/: incoming_packets.rs  mod.rs  socket_events.rs  socket_loop.rs
src/topics/: atomic_snapshot_id.rs  mod.rs  reusable_topics_list.rs  topic.rs  topic_data.rs  topic_data_access.rs  topic_inner.rs  topic_publishers.rs  topic_snapshot.rs  topic_statistics.rs  (+3 more)
(+227 files in other folders)
