[package]
name = "my-service-bus-main-node"
version = "2.3.0"
authors = ["amigin <amigin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

my-service-bus = { tag = "1.0.4", git = "https://github.com/MyJetTools/my-service-bus-sdk.git", features = [
    "tcp_contracts",
    "shared",

] }
my-http-server = { tag = "0.7.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "macros",
    "controllers",
    "static-files",
] }


my-tcp-sockets = { tag = "0.1.9", git = "https://github.com/MyJetTools/my-tcp-sockets.git" }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
    "base64",
    "vec-maybe-stack",
] }

my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git" }


tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
chrono = "*"
lazy_static = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_derive = "*"
serde_yaml = "*"
base64 = "*"
zip = "*"
md5 = "*"
anyhow = "*"
futures-core = "*"
prost = "*"
prost-types = "*"
tokio-stream = "*"
async-trait = "*"
futures-util = "*"
tokio-signal = "*"
signal-hook = "*"
rand = "*"
sysinfo = "*"
prometheus = "*"
uuid = { version = "*", features = ["serde", "v4"] }


tikv-jemalloc-ctl = { version = "*", features = ['use_std'] }
tikv-jemallocator = { version = "*", features = [
    "unprefixed_malloc_on_supported_platforms",
] }

[build-dependencies]
ci-utils = { git = "https://github.com/MyJetTools/ci-utils.git", tag = "0.1.0" }
